tests/fixtures/invalid/divmod_set_list.py
# Cannot call divmod() with Set[int], List[int]
x = divmod({1, 2, 3}, [1, 2, 3])
